# lib_affir

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  commitlint.config.js  main.cpp  pyproject.toml  tokenizer.md
affir/: common.h  engine.cpp  engine.h
affir/indexer/: indexer.cpp  indexer.h
affir/logger/: logger.cpp  logger.h
affir/models/: bigToken.cpp  bigToken.h
affir/processing/: dataHandler.cpp  dataHandler.h
affir/searcher/: search.cpp  search.h  searchResult.h
affir/storages/files/: fileStorage.cpp  fileStorage.h
affir/storages/indexes/: iIndexStorage.h
affir/storages/indexes/multi/: multiFileIndexStorage.cpp  multiFileIndexStorage.h
affir/storages/indexes/single/: singleIndexStorage.cpp  singleIndexStorage.h
affir/tokenizer/: tokenizer.cpp  tokenizer.h
affir/tokenizer/filters/: base.h  englishStemmer.cpp  englishStemmer.h  filterOrder.h  filters.h  htmler.cpp  htmler.h  lowercaser.cpp  lowercaser.h  punctuator.cpp  punctuator.h  russianPorterStemmer.cpp  russianPorterStemmer.h  stemFilter.cpp  stemFilter.h  stopWords.cpp  stopWords.h
docs/api/: Engine.md  dataHandler.md  engine.md  fileStorage.md  indexStorage.md  indexer.md  logger.md  multiFileIndexStorage.md  multifileIndexStorage.md  searcher.md  tokenizer.md
docs/diagrams/: create_index_sequence  facade  i_index_storage  search_sequence  single_index_storage
src/: common.h  engine.cpp  engine.h  main.cpp
src/filters/: base.cpp  base.h  english_stemmer.cpp  english_stemmer.h  russian_porter_stemmer.cpp  russian_porter_stemmer.h  stem_filter.cpp  stem_filter.h
src/indexer/: indexer.cpp  indexer.h
src/logger/: logger.cpp  logger.h
src/models/: bigToken.cpp  bigToken.h  token.cpp  token.h  tokenInfo.h
src/processing/: dataHandler.cpp  dataHandler.h  filterOrder.h
src/processing/encodingHandler/: encodingHandler.cpp  encodingHandler.h
src/searcher/: search.cpp  search.h  searchResult.h
src/storages/: fileStorage.cpp  fileStorage.h  iIndexStorage.h  iStorageIndex.h  multiFileIndexStorage.cpp  multiFileIndexStorage.h  storageIndexInterface.h
src/storages/files/: fileStorage.cpp  fileStorage.h
src/storages/indexes/: iIndexStorage.h
src/storages/indexes/multi/: multiFileIndexStorage.cpp  multiFileIndexStorage.h
src/storages/indexes/single/: singleIndexStorage.cpp  singleIndexStorage.h
src/tests/: tests.cpp
src/tokenizer/: Tokenizer.cpp  Tokenizer.h  tokenizer.cpp  tokenizer.h
src/tokenizer/filters/: base.h  englishStemmer.cpp  englishStemmer.h  filterOrder.h  filters.h  htmler.cpp  htmler.h  lowercaser.cpp  lowercaser.h  punctuator.cpp  punctuator.h  russianPorterStemmer.cpp  russianPorterStemmer.h  stemFilter.cpp  stemFilter.h  stopWords.cpp  stopWords.h
tests/: common.h  main.cpp  test_math.cpp  tests.h
tests/functional/: filtersTests.cpp  getTokenInCreatedIndex.cpp  tokIndIndStor.cpp  withoutReadTime.cpp
tests/performance/: tokenizerPerformanceTest.cpp
tests/pipline/: engineTests.cpp  groupTest.cpp
tests/utils/: utils.cpp  utils.h
